--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,11 +14,16 @@
  *= require_self
  */
 
-h1 {
+h1, h2, h3, h4 {
   font-family: sans-serif;
   color: dodgerblue;
   text-align: center;
 }
+
+p {
+  text-align: center;
+}
+
 
 sub {
   font-size: 0.6em;
@@ -26,6 +31,7 @@ sub {
 
  form {
   /* Just to center the form on the page */
+  box-sizing: border-box;
   margin: 0 auto;
   width: 800px;
   /* To see the outline of the form */
@@ -51,13 +57,14 @@ input, textarea {
   /* To make sure that all text fields have the same font settings
      By default, textareas have a monospace font */
   font: 1em sans-serif;
-
+  text-align: center;
   /* To give the same size to all text fields */
   width: 100px;
   box-sizing: border-box;
 
   /* To harmonize the look & feel of text field border */
   border: 1px solid #999;
+  border-radius: 5px;
 }
 
 input:focus, textarea:focus {
@@ -81,9 +88,52 @@ textarea {
 button {
   /* This extra margin represent roughly the same space as the space
      between the labels and their text fields */
-  margin-left: 400px;
-  margin-top: 40px;
-  background: coral;
-  color: white;
-  border-radius:10px;
+  width: 100%;
+  box-sizing: border-box;
+  /* margin-left: 400px; */
+  margin-top: 15px;
+  background-color: dodgerblue;
+	border-radius: 5px;
+	border: 1px solid #4D4D4D;
+  /* display:inline-block; */
+  font: 0.9em sans-serif;
+	cursor:pointer;
+	color:#ECECEC;
+	text-decoration: none;
+	text-shadow: none;
+}
+button:hover {
+	background-color:#185691;
+}
+
+.results {
+  box-sizing: border-box;
+  margin: 1em auto;
+  width: 800px;
+  font-family: sans-serif;
+  border: 1px solid darkcyan;
+  border-radius: 10px;
+  color: darkcyan;
+  padding: 1em;
+  text-align: center;
+}
+.error-result {
+  border: 1px solid #A55448;
+  font-family: Courier New, Courier, monospace;
+  color: firebrick;
+}
+
+.history {
+  box-sizing: border-box;
+  margin: 1em auto;
+  width: 800px;
+  border: 1px solid #CCC;
+  border-radius: 1em;
+}
+
+ul {
+  padding: 0;
+  font-family: sans-serif;
+  font-size: 0.8em;
+  color: coral;
 }
