--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,9 @@
  *= require_tree .
  *= require_self
  */
+body {
+  background:#232323;
+}
 
 h1, h2, h3, h4 {
   font-family: sans-serif;
@@ -36,10 +39,11 @@ sub {
   width: 800px;
   /* To see the outline of the form */
   padding: 1em;
-  border: 1px solid #CCC;
+  /* border: 1px solid #CCC; */
   border-radius: 1em;
   font-family: sans-serif;
-  color: #555555
+  color: #555555;  
+  background: #DDDDDD;
 }
 
 form div + div {
@@ -53,32 +57,24 @@ label {
   text-align: right;
 }
 
-input, textarea {
-  /* To make sure that all text fields have the same font settings
-     By default, textareas have a monospace font */
+input {
   font: 1em sans-serif;
   text-align: center;
-  /* To give the same size to all text fields */
   width: 100px;
+  height: 2em;
   box-sizing: border-box;
-
-  /* To harmonize the look & feel of text field border */
-  border: 1px solid #999;
+  /* border: 1px solid #999; */
+  border:none;
+  background: lightgrey;
   border-radius: 5px;
 }
 
-input:focus, textarea:focus {
+input:focus {
   /* To give a little highlight on active elements */
-  border-color: #000;
+  border-color: coral;
+  outline: none;
 }
 
-textarea {
-  /* To properly align multiline text fields with their labels */
-  vertical-align: top;
-
-  /* To give enough room to type some text */
-  height: 5em;
-}
 
 .button {
   /* To position the buttons to the same position of the text fields */
@@ -88,22 +84,25 @@ textarea {
 button {
   /* This extra margin represent roughly the same space as the space
      between the labels and their text fields */
-  width: 100%;
+  font: 1em sans-serif;
+  text-align: center;
+  width: 100px;
+  height: 2em;
   box-sizing: border-box;
-  /* margin-left: 400px; */
-  margin-top: 15px;
+  /* border: 1px solid #999; */
+  border:none;
+  border-radius: 5px;
+  margin-left: 405px;
+  margin-top: 1em;
   background-color: dodgerblue;
-	border-radius: 5px;
-	border: 1px solid #4D4D4D;
   /* display:inline-block; */
-  font: 0.9em sans-serif;
 	cursor:pointer;
-	color:#ECECEC;
+	color: #DDDDDD;
 	text-decoration: none;
 	text-shadow: none;
 }
 button:hover {
-	background-color:#185691;
+	background-color: #1C81DF;
 }
 
 .results {
@@ -111,29 +110,38 @@ button:hover {
   margin: 1em auto;
   width: 800px;
   font-family: sans-serif;
-  border: 1px solid darkcyan;
+  background: #DDDDDD;
+  /* border: 1px solid darkcyan; */
   border-radius: 10px;
   color: darkcyan;
   padding: 1em;
   text-align: center;
 }
 .error-result {
-  border: 1px solid #A55448;
-  font-family: Courier New, Courier, monospace;
+  /* border: 1px solid #A55448; */
+  font-family: Courier, monospace;
   color: firebrick;
 }
 
 .history {
+  padding: 1em;
   box-sizing: border-box;
   margin: 1em auto;
   width: 800px;
-  border: 1px solid #CCC;
+  /* border: 1px solid #CCC; */
+  background: #DDDDDD;
   border-radius: 1em;
 }
 
-ul {
+.history ul {
   padding: 0;
   font-family: sans-serif;
   font-size: 0.8em;
-  color: coral;
+
+}
+.history ul p {
+color: coral;
+}
+.history ul p:nth-child(2n) {
+  color: #DB6C44;
 }
